2001-11-18  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_string.c (bk_encode_base64): Mime encode/decode routines

	* src/mmcat.c (main): Mime encode/decode test program (useful too)

2001-11-16  James Tanis  <jtt@winwood.sysdetect.com>

	* src/bttcp.c (main): If using -r without -l make the local name
	BK_ADDR_ANY.
	(proginit): Don't create remote bk_netinfo if we're receiving.
	Listening transfers now working.

	* lib/b_getbyfoo.c (bk_gethostbyfoo): support for "resolving" the
	special token BK_ADDR_ANY ("resolves" to the ANY address for the
	given address family).

	* lib/b_addrgroup.c (do_net_init_af_inet_tcp_listen): Some copy
	paste errors copied from connect section.
	(net_init_check_sanity): Correct sanity checking. Was doing
	*everything* under if (remote && local) condition which was
	patently wrong

	* test/test_getbyfoo.c (main): Better usage message.

	* src/proto.c (main): Example of how to configure pOpt to print
	out the meaning of an option argument on the usage (brief) line.

	* src/bttcp.c: Too many chages. *Connecting* relay works.

	* lib/b_netinfo.c (bk_netinfo_from_socket): Initialize inet
	sockaddr's correctly.
	(bk_netinfo_from_socket): Don't pass sockaddr when you mean to
	pass only the contained address.
	(bk_netinfo_from_socket): Split out INET6 (sigh). There are *just*
	enough differences from INET to require this.
	(bk_netinfo_info): Force bni to update and return pretty string.

	* lib/b_addrgroup.c (bk_addrgroup_destroy): Public interface for
	addrgroup destruction.
	(net_init_abort): Abort network initiation with correct clean up.
	(net_init_end): Finish network initiation with correct clean up.
	(tcp_connect_activity): Make sure that the event is removed and
	NULL'ed before when activity is detected.
	(tcp_connect_start): Don't recompute the socket type when you
	already know it.
	(do_net_init_af_inet_tcp_listen): Don't recompute the socket type
	whe you already know it.

	* lib/b_addrgroup.c (everywhere): Convert to new net_init