@@ -1,5 +1,7 @@
 2001-11-18  Seth Robertson  <seth@yeah.baka.org>
 
+	* src/bttcp.c: Update James' documentation and formatting.  Shame on James.
+
 	* lib/b_string.c (bk_encode_base64): Mime encode/decode routines
 
 	* src/mmcat.c (main): Mime encode/decode test program (useful too)
